# wikimind

./: .gitignore  ARCHITECTURE.md  CHEATSHEET.md  CLAUDE.md  GAPS.md  LICENSE  PROGRESS.md  README.md  idea.md  plan-v2.md  pyproject.toml
.claude/: settings.local.json
archive/: plan.md  plan_en.md
docs/: qmd-setup.md  search-comparison.md  templates.md
scripts/: build-wheel.ps1  build-wheel.sh
tests/: conftest.py  test_cli.py  test_config.py  test_ingest.py  test_lint.py  test_llm.py  test_query.py  test_retrieval.py  test_server.py  test_wiki.py
wikimind/: cli.py  config.py  llm.py  llm_schema.py  retrieval.py  server.py  wiki.py
wikimind/operations/: ingest.py  lint.py  query.py
wikimind/prompts/: ingest.py  lint.py  query.py
wikimind/templates/book/: CLAUDE.md  index.md  overview.md  wikimind.toml
wikimind/templates/code/: CLAUDE.md  index.md  overview.md  wikimind.toml
wikimind/templates/general/: CLAUDE.md  index.md  overview.md  wikimind.toml
wikimind/templates/research/: CLAUDE.md  index.md  overview.md  wikimind.toml
